--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-	"python.pythonPath": "/usr/bin/python"
+	"python.pythonPath": "/usr/bin/python",
+	"C_Cpp.default.configurationProvider": "go2sh.cmake-integration",
+	"files.associations": {
+		"*.in": "cpp"
+	}
 }
